Update java to version 17 and spring to version 3.0.0
* Update graalVm to generate native-image by maven